<resources>
    <string name="app_name">SpyAgent</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="players_are_divided_into_two_types_spies_and_civilians_only_civilians_know_the_location_and_they_must_find_the_spy_the_spy_must_guess_the_location">Players are divided into two types: Spies and Civilians.Only civilians know the location and they must find the Spy. The Spy must guess the location</string>
    <string name="get_a_role">Get a role</string>
    <string name="ask_questions">Ask questions</string>
    <string name="all_players_ask_questions_in_turn_you_can_ask_questions_to_any_player">All players ask questions in turn. You can ask questions to any player.</string>
    <string name="listen">Listen</string>
    <string name="listen_and_memorize_questions_and_answers_from_other_players">Listen and memorize questions and answers from other players</string>
    <string name="vote">Vote</string>
    <string name="any_player_may_name_the_spy_after_that_all_players_vote_whether_the_player_is_the_spy">Any player may name the Spy. After that, all players vote whether the player is the Spy</string>
    <string name="we_won">We won?</string>
    <string name="finish">Finish</string>
    <string name="with_the_consent_of_all_players_the_selected_player_voices_his_role_if_he_turns_out_to_be_a_civilian_the_spy_wins_if_the_spy_has_guessed_the_location_he_can_name_it_if_the_spy_guessed_right_he_wins_otherwise_he_loses">With the consent of all players, the selected player voices his role. If he turns out to be a Civilian, the Spy wins. If the Spy has guessed the location, he can name it. If the Spy guessed right, he wins, otherwise, he loses</string>
    <string name="remember_about_timer">Remember about timer</string>
    <string name="be_mindful_of_the_time_it_is_limited_and_plays_into_the_hands_of_the_spy_at_the_end_of_the_timer_the_spy_wins">Be mindful of the time. It is limited and plays into the hands of the spy. At the end of the timer, the Spy wins.</string>
    <string name="skip">Skip</string>
    <string name="short_rule">Short rule</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="first_screen_rule_title">Game objectives:</string>
    <string name="first_screen_rule">
    The spy: try to guess the round\'s location. Infer from others\' questions and answers.


    Other players: figure out who the spy is.
    </string>
    <string name="second_screen_rule_title">Gameplay flow:</string>
    <string name="second_screen_rule">
    Round length: 6-10 minutes. Shorter for smaller groups, longer for larger.

    The location: round starts, each player is given a location card. The location is the same for all players (e.g., the bank) except for one player, who is randomly given the "spy" card. The spy does not know the round\'s location.
    </string>
    <string name="third_screen_rule">
    Questioning: the game leader begins by questioning another player about the location.

    Answering: the questioned player must answer. No follow up questions allowed. After they answer, it\'s then their turn to ask someone else a question. This continues until round is over.
    </string>
    <string name="fourth_screen_rule_title">Players guessing the spy:</string>
    <string name="fourth_screen_rule">
    Putting up for vote: at any time, a player can try to indict a suspected spy by putting that suspect up for vote. Then go one by one clockwise around the circle, and each player much cast their vote if they\'re in agreement to indict.

    Spy is indicted: if a player is indicted, they must reveal whether or not they are the spy and the round ends.
    </string>
    <string name="fifth_screen_rule_title">Spy guessing the location:</string>
    <string name="fifth_screen_rule">
    Spy guesses: at any time, the spy can reveal that they are the spy and make a guess at what the location is. The round immediately ends.
    </string>
    <string name="sixth_screen_rule_title">Round ends when:</string>
    <string name="sixth_screen_rule">
Indictment: group successfully indicts a player after voting

                    OR

Spy guesses: spy stops the round to make a guess about the location

                    OR

No time left: clock runs out
    </string>
    <string name="seventh_screen_rule_title">Scoring and who wins:</string>
    <string name="seventh_screen_rule">
Spy Victory

    The spy earns 2 points if no one is successfully indicted of being the spy
    The spy earns 4 points if a non-spy player is successfully indicted of being a spy
    The spy earns 4 points if the spy stops the game and successfully guesses the location
    </string>

    <string name="eighth_screen_rule">
Non-Spy Victory

    Each non-spy player earns 1 point
    The player who initiated the successful indictment of the spy earns 2 points instead
    </string>
    <string name="sets">Sets</string>
    <string name="save_change">Save change</string>
    <string name="add_word">Add word</string>
    <string name="set_name">Set name</string>
    <string name="text_new_value">Text new value</string>
    <string name="enter_new_word">Enter new word</string>
    <string name="Confirm">Confirm</string>
    <string name="Cancel">Cancel</string>
    <string name="save_set">Save Set</string>
    <string name="number_of_players">Number of players</string>
    <string name="number_of_spies">Number of spies</string>
    <string name="timer_in_minutes">Timer in minutes</string>
    <string name="show_category">Show category</string>
    <string name="choose_category">Choose category</string>
    <string name="create_game">Create game</string>
    <string name="choose_categories_to_game">Choose categories to game</string>
    <string name="add_category">Add category</string>
    <string name="you_are_spy">You are Spy</string>
    <string name="player">Player</string>
    <string name="descriptionPlayer">Tap and get your role</string>
    <string name="descriptionWord">Ask questions. And find out who the spy is</string>
    <string name="descriptionSpy">Try to understand what location the players are talking about</string>
    <string name="start_timer">start timer</string>
    <string name="start_asking">Start asking!</string>
    <string name="play_again">Play again</string>
    <string name="player_1">Player 1</string>
    <string name="add_no_less_then_one_set">Add no less than one set</string>
    <string name="spy">SPY</string>
    <string name="agent">AGENT</string>
    <string name="tagAddWordNewSet">tagAddWordNewSet</string>
    <string name="tagUpdateWordNewSet">tagUpdateWordNewSet</string>
    <string name="tagAddWordDetail">tagAddWordDetail</string>
    <string name="tagUpdateWordDetail">tagUpdateWordDetail</string>


</resources>